[gd_scene load_steps=5 format=3 uid="uid://4l45j2tc7bxh"]

[ext_resource type="Theme" uid="uid://bxvebmn23os06" path="res://themes/main_theme.tres" id="1_mvonl"]
[ext_resource type="Script" path="res://scripts/api_walkthrough/introduction_screen.gd" id="2_1vocu"]
[ext_resource type="Script" path="res://scripts/api_walkthrough/api_link.gd" id="2_kjcaw"]
[ext_resource type="Texture2D" uid="uid://d4ddqufrhkvit" path="res://images/api_key_screen.png" id="3_16r40"]

[node name="introduction_screen" type="PanelContainer"]
self_modulate = Color(0.14902, 0.152941, 0.188235, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mvonl")
script = ExtResource("2_1vocu")

[node name="mcon" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="vcon" type="VBoxContainer" parent="mcon"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="mcon/vcon"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quasai"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="RichTextLabel" parent="mcon/vcon"]
layout_mode = 2
text = "To use Quasai, you need to enter a valid OpenAI API key. Please enter one in the textbox below. Once you have entered your API Key. Click \"Continue\". If you're unfamiliar with OpenAI's API and ChatGPT please read the below paragraphs carefully."
fit_content = true

[node name="api_error" type="Label" parent="mcon/vcon"]
self_modulate = Color(1, 0.301961, 0.235294, 1)
layout_mode = 2
text = "Error"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="api_key_input" type="LineEdit" parent="mcon/vcon"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 6
placeholder_text = "Enter your API Key"
clear_button_enabled = true

[node name="continue_button" type="Button" parent="mcon/vcon"]
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[node name="ScrollContainer" type="ScrollContainer" parent="mcon/vcon"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="mcon/vcon/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label4" type="Label" parent="mcon/vcon/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "What is an API key?"

[node name="Label5" type="RichTextLabel" parent="mcon/vcon/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "An API key is a unique identifier provided to users when they request access to an API or application programming interface. It serves as a secure way to authenticate requests and grant permission to certain features or information within the API. Essentially, it's a secret code or token that allows the user's application to interact with the API and retrieve information."
fit_content = true

[node name="Label6" type="Label" parent="mcon/vcon/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Where do I get an OpenAI API key?"

[node name="api_link" type="RichTextLabel" parent="mcon/vcon/ScrollContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "To obtain an API key from OpenAI, please go to their website at [url]https://platform.openai.com/account/api-keys[/url] and either create an account or log in if you already have one (if you've used ChatGPT before, your login details are the same). Once you've logged in, click on \"Create new secret key\" to generate a new API key as depicted below. "
fit_content = true
script = ExtResource("2_kjcaw")

[node name="TextureRect" type="TextureRect" parent="mcon/vcon/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 350)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_16r40")
expand_mode = 1
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="mcon/vcon/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "It's important to save your API key in a secure location as you won't be able to recover it if lost. If your API key is ever lost or leaked, you'll need to delete it from the API keys screen and generate a new key on the OpenAI website.

Once you have your API Key, simply enter it in the input box above and click continue."
fit_content = true

[node name="Label7" type="Label" parent="mcon/vcon/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Do I need to pay money?"

[node name="RichTextLabel2" type="RichTextLabel" parent="mcon/vcon/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Yes, OpenAI's API costs money to use. Currently, the cost for GPT3.5 is $0.002 USD per every 1000 tokens used. GPT4 uses roughly 0.005 USD per every 1000 tokens used. Quasai is simply an easier way to interface with the API and build upon its features.
Quasai keeps track of your token usage and longer messages (including pre-processor prompts) will require more tokens.

To avoid overspending, it is highly advised that you set a spending limit through the OpenAI Usage Limit options on the Billings page. 

"
fit_content = true

[node name="Label8" type="Label" parent="mcon/vcon/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Is this different or better than ChatGPT Plus?"

[node name="RichTextLabel3" type="RichTextLabel" parent="mcon/vcon/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Quasai offers all the typical features you would expect from ChatGPT, such as the option to save conversations and the ability to continue chatting during peak traffic periods. However, Quasai goes beyond ChatGPT by giving you more control over the AI's settings. Additionally, there are planned features for creating interface use cases, which will further expand GPT's capabilities.

Moreover, Quasai may be a more cost-effective alternative to ChatGPT Plus since you only need to pay for the tokens that you use. If you don't use the program for an extended period, there are no costs incurred, meaning you only pay for what you use."
fit_content = true
